# FrontLoop

./: .gitignore  README.md
backend/: pyproject.toml  supervisor_dashboard.py
backend/app/: main.py
backend/app/agent/: livekit_agent.py  main.py
backend/app/db/: firebase_client.py  knowledge_base.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CustomerChat.css  CustomerChat.tsx  SupervisorDashboard.css  SupervisorDashboard.tsx  Toast.css  Toast.tsx
frontend/src/context/: ThemeContext.tsx  ToastContext.tsx
