[project]
name = "backend"
version = "0.1.0"
description = "Backend for FrontLoop application"
authors = [
    {name = "theDynamicPunk",email = "ashutoshgu18@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "requests",
    "fastapi",
    "pydantic",
    "numpy",
    "firebase-admin",
    "uvicorn"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false